[gd_scene format=3 uid="uid://bjyjyvtisvys3"]

[ext_resource type="Script" uid="uid://bffig7vscod58" path="res://player/scripts/player.gd" id="1_g1dw6"]
[ext_resource type="Script" uid="uid://byvh4x38sd01b" path="res://player/states/idle.gd" id="2_yw30f"]
[ext_resource type="Script" uid="uid://b473pt6ti27l1" path="res://player/states/run.gd" id="3_qjkh3"]
[ext_resource type="Script" uid="uid://dsb611lm5v1ox" path="res://player/states/jump.gd" id="4_qjkh3"]
[ext_resource type="Script" uid="uid://gbryxbrq0bno" path="res://player/states/fall.gd" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://bn1ucofsxvrrr" path="res://player/states/crouch.gd" id="6_g6k8r"]
[ext_resource type="Script" uid="uid://deayldrnip1d6" path="res://player/scripts/input_hints.gd" id="7_rgyib"]
[ext_resource type="Texture2D" uid="uid://csa1ryuq8w0xd" path="res://player/sprites/input_icons.png" id="8_hg6s5"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g6k8r"]
load_path = "res://.godot/imported/hero.png-90a362881ab5da47bb204d6eae108e57.ctex"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g6k8r"]
radius = 8.0
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_boad6"]
radius = 8.0

[sub_resource type="Animation" id="Animation_g6k8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "crouch"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_rgyib"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_8t03j"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ieo8"]
_data = {
&"RESET": SubResource("Animation_g6k8r"),
&"crouch": SubResource("Animation_boad6"),
&"idle": SubResource("Animation_rgyib"),
&"jump": SubResource("Animation_hg6s5"),
&"run": SubResource("Animation_8t03j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6k8r"]
size = Vector2(16, 3)

[sub_resource type="Gradient" id="Gradient_g6k8r"]
offsets = PackedFloat32Array(0, 0.37349397)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_boad6"]
gradient = SubResource("Gradient_g6k8r")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" unique_id=2110664578 groups=["Player"]]
z_index = 1
collision_layer = 16
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_g1dw6")

[node name="States" type="Node" parent="." unique_id=1651436720]

[node name="Idle" type="Node" parent="States" unique_id=265534554]
unique_name_in_owner = true
script = ExtResource("2_yw30f")

[node name="Run" type="Node" parent="States" unique_id=737992940]
unique_name_in_owner = true
script = ExtResource("3_qjkh3")

[node name="Jump" type="Node" parent="States" unique_id=1979920673]
unique_name_in_owner = true
script = ExtResource("4_qjkh3")

[node name="Fall" type="Node" parent="States" unique_id=72253290]
unique_name_in_owner = true
script = ExtResource("5_g6k8r")

[node name="Crouch" type="Node" parent="States" unique_id=969083024]
unique_name_in_owner = true
script = ExtResource("6_g6k8r")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=783697793]
position = Vector2(0, -24)
texture = SubResource("CompressedTexture2D_g6k8r")
offset = Vector2(0, -15)
hframes = 16
vframes = 4

[node name="CollisionStand" type="CollisionShape2D" parent="." unique_id=257840868]
position = Vector2(0, -23)
shape = SubResource("CapsuleShape2D_g6k8r")
debug_color = Color(0, 0.6, 0.69803923, 0.37254903)

[node name="CollisionCrouch" type="CollisionShape2D" parent="." unique_id=323695000]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_boad6")
disabled = true
debug_color = Color(0, 0.6, 0.69803923, 0.37254903)

[node name="Label" type="Label" parent="." unique_id=1859692505]
visible = false
offset_left = -36.0
offset_top = -73.0
offset_right = 38.0
offset_bottom = -50.0
theme_override_font_sizes/font_size = 12
text = "label"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1239217034]
libraries/ = SubResource("AnimationLibrary_2ieo8")
autoplay = &"idle"

[node name="OneWayPlatformShapecast" type="ShapeCast2D" parent="." unique_id=42462052]
position = Vector2(0, -3)
enabled = false
shape = SubResource("RectangleShape2D_g6k8r")
target_position = Vector2(0, 6)
max_results = 6
collision_mask = 2

[node name="Camera2D" type="Camera2D" parent="." unique_id=524027182]
process_mode = 3
position = Vector2(0, -40)

[node name="PointLight2D" type="PointLight2D" parent="." unique_id=53756889]
visible = false
color = Color(1, 1, 1, 0.5882353)
texture = SubResource("GradientTexture2D_boad6")
offset = Vector2(0, -16)

[node name="InputHints" type="Node2D" parent="." unique_id=332082164]
position = Vector2(0, -64)
script = ExtResource("7_rgyib")

[node name="Sprite2D" type="Sprite2D" parent="InputHints" unique_id=102063414]
texture = ExtResource("8_hg6s5")
hframes = 16
